--- a/app/navigation/navigation.component.css
+++ b/app/navigation/navigation.component.css
@@ -73,6 +73,10 @@
 @media screen and (min-width:769px) and (max-width:900px){
 
 
+    .logo p{
+        font-size: 1.3rem;
+    }
+
 
     .bars{
         justify-content: center;
